# ghosthook

./: .gitignore  Cargo.toml  MIT  README.md  todo.md
schemas/: post_published.jtd.json
src/: json.rs  main.rs  mod.rs
